--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ apply plugin: 'eclipse-wtp'
 compileJava.options.encoding = "UTF-8"
 
 dependencies {
+	// https://mvnrepository.com/artifact/org.json/json
+	compile group: 'org.json', name: 'json', version: '20180813'
+
 	// https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12
 	compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
 	
