--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ dependencies {
 	// https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
 	providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
 	
+	implementation 'com.auth0:java-jwt:3.8.3'
+	
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     api 'org.apache.commons:commons-math3:3.6.1'
 
